feat: real auth — field-user shared-password login, admin bcrypt login, password rotation endpoint