@@ -5,12 +5,13 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
@@ -22,17 +23,29 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
     }
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
+    protected void doFilterInternal(HttpServletRequest request,
+                                    HttpServletResponse response,
+                                    FilterChain filterChain)
             throws ServletException, IOException {
+
         String authHeader = request.getHeader("Authorization");
 
         if (authHeader != null && authHeader.startsWith("Bearer ")) {
             String token = authHeader.substring(7);
+
             if (jwtUtil.isTokenValid(token)) {
-                String userId = jwtUtil.extractUserId(token);
-                UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
-                        userId, null, Collections.emptyList());
-                SecurityContextHolder.getContext().setAuthentication(auth);
+                // sub = user_id or admin_id (UUID string)
+                String subject = jwtUtil.extractSubject(token);
+                // role = "admin" | "supervisor" | "teacher"
+                String role    = jwtUtil.extractClaim(token, "role");
+
+                if (subject != null && role != null) {
+                    // Spring Security expects authorities prefixed with ROLE_
+                    var authority = new SimpleGrantedAuthority("ROLE_" + role);
+                    var auth = new UsernamePasswordAuthenticationToken(
+                            subject, null, List.of(authority));
+                    SecurityContextHolder.getContext().setAuthentication(auth);
+                }
             }
         }
 
